--- a/fileImporter.ui
+++ b/fileImporter.ui
@@ -63,101 +63,116 @@
     <rect>
      <x>0</x>
      <y>60</y>
-     <width>210</width>
-     <height>161</height>
+     <width>212</width>
+     <height>181</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout_3">
+   <layout class="QVBoxLayout" name="verticalLayout_4">
     <item>
-     <widget class="QCheckBox" name="textCheck">
-      <property name="text">
-       <string>Text?</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_4">
+     <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QLabel" name="label_2">
+       <widget class="QCheckBox" name="textCheck">
         <property name="text">
-         <string>Split</string>
+         <string>Text?</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QComboBox" name="splitBox">
-        <property name="font">
-         <font>
-          <pointsize>16</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
-        <item>
-         <property name="text">
-          <string>,</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>;</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>|</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>:</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>.</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string> </string>
-         </property>
-        </item>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
-      <item>
-       <widget class="QPushButton" name="openButton">
+       <widget class="QCheckBox" name="preprocessCheck">
         <property name="text">
-         <string>Open file</string>
+         <string>Preprocess Data</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_5">
+     <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
-       <widget class="QLabel" name="label_5">
+       <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <item>
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>Split</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QComboBox" name="splitBox">
+          <property name="font">
+           <font>
+            <pointsize>16</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
+          <item>
+           <property name="text">
+            <string>,</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>;</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>|</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>:</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>.</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string> </string>
+           </property>
+          </item>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_2">
+        <item>
+         <widget class="QPushButton" name="openButton">
+          <property name="text">
+           <string>Open file</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_5">
+        <item>
+         <widget class="QLabel" name="label_5">
+          <property name="text">
+           <string>Dataset name</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="nameEdit"/>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <widget class="QPushButton" name="importButton">
         <property name="text">
-         <string>Dataset name</string>
+         <string>Import Dataset</string>
         </property>
        </widget>
       </item>
-      <item>
-       <widget class="QLineEdit" name="nameEdit"/>
-      </item>
      </layout>
-    </item>
-    <item>
-     <widget class="QPushButton" name="importButton">
-      <property name="text">
-       <string>Import Dataset</string>
-      </property>
-     </widget>
     </item>
    </layout>
   </widget>
