--- a/ui/fileImporter.ui
+++ b/ui/fileImporter.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>713</width>
-    <height>382</height>
+    <height>438</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -31,7 +31,7 @@
     <string>File Uploader</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>220</x>
@@ -58,121 +58,162 @@
     </item>
    </layout>
   </widget>
+  <widget class="QCheckBox" name="preprocessCheck">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>80</y>
+     <width>141</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Preprocess Data</string>
+   </property>
+  </widget>
   <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>60</y>
-     <width>212</width>
-     <height>181</height>
+     <x>10</x>
+     <y>200</y>
+     <width>208</width>
+     <height>41</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout_4">
+   <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="QCheckBox" name="textCheck">
-        <property name="text">
-         <string>Text?</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="preprocessCheck">
-        <property name="text">
-         <string>Preprocess Data</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>Dataset name</string>
+      </property>
+     </widget>
     </item>
     <item>
-     <layout class="QVBoxLayout" name="verticalLayout_3">
+     <widget class="QLineEdit" name="nameEdit"/>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>160</y>
+     <width>121</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_3">
+    <item>
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>CSV Split</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QComboBox" name="splitBox">
+      <property name="font">
+       <font>
+        <pointsize>16</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_4">
-        <item>
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string>Split</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="splitBox">
-          <property name="font">
-           <font>
-            <pointsize>16</pointsize>
-            <weight>75</weight>
-            <bold>true</bold>
-           </font>
-          </property>
-          <item>
-           <property name="text">
-            <string>,</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>;</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>|</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>:</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>.</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string> </string>
-           </property>
-          </item>
-         </widget>
-        </item>
-       </layout>
+       <property name="text">
+        <string>,</string>
+       </property>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout_2">
-        <item>
-         <widget class="QPushButton" name="openButton">
-          <property name="text">
-           <string>Open file</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+       <property name="text">
+        <string>;</string>
+       </property>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_5">
-        <item>
-         <widget class="QLabel" name="label_5">
-          <property name="text">
-           <string>Dataset name</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLineEdit" name="nameEdit"/>
-        </item>
-       </layout>
+       <property name="text">
+        <string>|</string>
+       </property>
       </item>
       <item>
-       <widget class="QPushButton" name="importButton">
-        <property name="text">
-         <string>Import Dataset</string>
-        </property>
-       </widget>
+       <property name="text">
+        <string>:</string>
+       </property>
       </item>
-     </layout>
+      <item>
+       <property name="text">
+        <string>.</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string/>
+       </property>
+      </item>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>120</y>
+     <width>141</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>File type</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QComboBox" name="typeBox">
+      <item>
+       <property name="text">
+        <string>CSV</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Text</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>XML</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>250</y>
+     <width>181</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_4">
+    <item>
+     <widget class="QPushButton" name="importButton">
+      <property name="text">
+       <string>Import Dataset</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="openButton">
+      <property name="text">
+       <string>Open file</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
